--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,8 +41,9 @@ services:
       - "8222:8222"
     networks:
       - kubesec-net
+    command: ["--http_port", "8222"]
     healthcheck:
-      test: ["CMD", "nats-server", "--signal", "ldm"]
+      test: ["CMD", "wget", "--spider", "-q", "http://localhost:8222/healthz"]
       interval: 5s
       timeout: 5s
       retries: 5
