--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -58,7 +58,11 @@ services:
     ports:
       - "8081:8081"
     environment:
-      DATABASE_URL: postgres://${POSTGRES_USER:-kubesec}:${POSTGRES_PASSWORD:-kubesec_secret}@postgres:5432/account_db?sslmode=disable
+      DB_HOST: postgres
+      DB_PORT: "5432"
+      DB_USER: ${POSTGRES_USER:-kubesec}
+      DB_PASSWORD: ${POSTGRES_PASSWORD:-kubesec_secret}
+      DB_NAME: account_db
       SERVER_PORT: "8081"
       NATS_URL: nats://nats:4222
     depends_on:
@@ -77,9 +81,13 @@ services:
     ports:
       - "8082:8082"
     environment:
-      DATABASE_URL: postgres://${POSTGRES_USER:-kubesec}:${POSTGRES_PASSWORD:-kubesec_secret}@postgres:5432/auth_db?sslmode=disable
+      DB_HOST: postgres
+      DB_PORT: "5432"
+      DB_USER: ${POSTGRES_USER:-kubesec}
+      DB_PASSWORD: ${POSTGRES_PASSWORD:-kubesec_secret}
+      DB_NAME: auth_db
       SERVER_PORT: "8082"
-      REDIS_URL: redis://redis:6379/0
+      REDIS_ADDR: redis:6379
       JWT_SECRET: ${JWT_SECRET:-change-me-in-production}
     depends_on:
       postgres:
@@ -97,7 +105,11 @@ services:
     ports:
       - "8083:8083"
     environment:
-      DATABASE_URL: postgres://${POSTGRES_USER:-kubesec}:${POSTGRES_PASSWORD:-kubesec_secret}@postgres:5432/transaction_db?sslmode=disable
+      DB_HOST: postgres
+      DB_PORT: "5432"
+      DB_USER: ${POSTGRES_USER:-kubesec}
+      DB_PASSWORD: ${POSTGRES_PASSWORD:-kubesec_secret}
+      DB_NAME: transaction_db
       SERVER_PORT: "8083"
       NATS_URL: nats://nats:4222
     depends_on:
